Fixed layout issues

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,3 +13,8 @@
   position: -webkit-sticky;
   position: sticky;
 } */
+
+body {
+  /* font-family: "PT Sans Narrow", sans-serif; */
+  /* font-family: "Sue Ellen Francisco", cursive; */
+}
